# rice

./: .travis.yml  Dockerfile  Pipfile  README.md  pyproject.toml  rice.py
rice/: __init__.py  __main__.py  template.py  utils.py
tests/: test_deglob.py  test_template.py
